kubernetes/test/app-test-ingress-flask.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.space-launches.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service-test
            port:
              number: 80
