kubernetes/test/app-test-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-test
spec:
  selector:
    app: flask-app-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
