kubernetes/test/app-test-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-nodeport-test
spec:
  selector:
    app: flask-app-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30090
  type: NodePort
